--- a/mathling/index.html
+++ b/mathling/index.html
@@ -60,10 +60,52 @@
         <!-- <hr> -->
 
         <p><b>Upcoming Meetings </b>:</p>
-        <b> Spring 2020 schedule</b><br/>
-        <p><b> *Update, 3/12/2020: All meetings are postponed until further notice due to university's emergency COVID-19 policy on in-person meetings.*</b><br>
-            Any updates will be posted here and through the mailing list. 
+        <p><b> Summer 2020 schedule</b><br/>
+        All meetings every other Thurs 10:30am -- 11:30pm (EST) on WebEx.
         </p>
+
+        <table>
+            <tr>
+                <td><b>Date</b></td> <td><b>Topic</b></td> <td><b>Presenter</b></td> <td><b>Notes</b></td>
+            </tr>
+            <tr>
+                <td>6/25</td> <td> PAC learning </td> <td>Huteng</td> <td></td>
+            </tr>
+            <tr>
+                <td>7/9</td> <td> TBD </td>
+            </tr>
+            <tr>
+                <td>7/23</td> <td> TBD </td>
+            </tr>
+            <tr>
+                <td>8/6</td> <td> TBD </td>
+            </tr>
+            <tr>
+                <td>8/20</td> <td> TBD </td>
+            </tr>
+        </table>
+
+        This summer we'll be talking about <strong>learning</strong>. Proposed topics include: 
+
+        <ul>
+            <li>Hidden Markov Models</li>
+            <li>Neural networks (Karen/Eileen?)</li>
+            <li>Angluin 1980/1982 (grammatical inference of formal langauges)</li>
+            <li>...</li>
+        </ul>
+
+        Please email Adam or Eileen to claim a date and/or topic! <strong>Presenters need not be experts</strong> or really have an official "presentation"--the goal is to lead the group as we learn together.
+
+
+
+        <hr>
+
+        <h3>Previous meetings</h3>
+
+        <b> Spring 2020 schedule</b><br/>
+        <!-- <p><b> *Update, 3/12/2020: All meetings are postponed until further notice due to university's emergency COVID-19 policy on in-person meetings.*</b><br> -->
+        <!-- Any updates will be posted here and through the mailing list.  -->
+        <!-- </p> -->
 
         All meetings Thurs at 1:30pm -- 2:30pm in 108, 18 Seminary Pl, unless otherwise noted<br/>
         <table>
@@ -92,10 +134,6 @@
                 <td></td><td></td><td><del>Shiori, Wenyue</del></td><td></td>
             </tr>
         </table>
-
-        <hr>
-
-        <h3>Previous meetings</h3>
         <p><b>Spring 2020 Meeting 1: The outlook and import of mathematical linguistics</b>
             <p>To begin the semester with a review of the outlook and import of mathematical linguistics, Adam J. will summarize Jeff Heinz's recent talk at the Society for Computation in Linguistics on mathematical linguistics in the 21st century (slides available <a href="http://jeffreyheinz.net/talks/Heinz-2020-ML21C-slides.pdf">here</a>)</p>
             <p>This semester our MathLing meetings will be on Thursdays from 1:30pm to 2:30pm. The date and venue of our first meeting are below: </p> 
