--- a/mathling/index.html
+++ b/mathling/index.html
@@ -31,11 +31,11 @@
                 <td><a href="http://adamjardine.net">Adam Jardine</a></td> 
             </tr>
             <tr>
-                <td rowspan="2"><b>Student organizers:</b></td>
-                <td> <a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a></td> 
-            </tr>
-            <tr>
-                <td> <a href="http://hutengdai.com">Huteng Dai</a></td>
+                <td><b>Student organizers:</b></td>
+                <td>
+                    <a href="https://www.nchemey.com/">Natasha Chemey</a><br>
+                    Tatevik Yolyan
+                </td>
             </tr>
             <tr>
                 <td colspan="2">
@@ -61,7 +61,7 @@
 
         <p><b>Upcoming Meetings </b>:</p>
         <p><b> Summer 2020 schedule</b><br/>
-        All meetings every other Thurs 10:30am -- 11:30pm (EST) on WebEx.
+        All meetings every other Thurs 10:30 -- 11:30am (EST) on WebEx.
         </p>
 
         <table>
@@ -94,7 +94,7 @@
             <li>...</li>
         </ul>
 
-        Please email Adam or Eileen to claim a date and/or topic! <strong>Presenters need not be experts</strong> or really have an official "presentation"--the goal is to lead the group as we learn together.
+        Please email Eileen or Adam to claim a date and/or topic! <strong>Presenters need not be experts</strong> or really have an official "presentation"--the goal is to lead the group as we learn together.
 
 
 
