add email addresses for Adam and Eileen

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -94,7 +94,7 @@
             <li>...</li>
         </ul>
 
-        Please email Eileen or Adam to claim a date and/or topic! <strong>Presenters need not be experts</strong> or really have an official "presentation"--the goal is to lead the group as we learn together.
+      Please email Eileen (<a href="mailto:eileen.blum@rutgers.edu">eileen.blum@rutgers.edu</a>) or Adam (<a href="mailto:adam.jardine@rutgers.edu">adam.jardine@rutgers.edu</a>) to claim a date and/or topic! <strong>Presenters need not be experts</strong> or really have an official "presentation"--the goal is to lead the group as we learn together.
 
 
 
