update summer 2020 schedule
add Bayesian learning, Wenyue on July 9

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -72,7 +72,7 @@
                 <td>6/25</td> <td> PAC learning </td> <td>Huteng</td> <td></td>
             </tr>
             <tr>
-                <td>7/9</td> <td> TBD </td>
+                <td>7/9</td> <td> Bayesian learning </td> <td>Wenyue</td> <td></td
             </tr>
             <tr>
                 <td>7/23</td> <td> TBD </td>
