--- a/mathling/index.html
+++ b/mathling/index.html
@@ -69,7 +69,7 @@
                 <td><b>Date</b></td> <td><b>Topic</b></td> <td><b>Presenter</b></td> <td><b>Notes</b></td>
             </tr>
             <tr>
-                <td>6/25</td> <td> PAC learning </td> <td>Huteng</td> <td></td>
+                <td>6/25</td> <td> PAC learning </td> <td>Huteng</td> <td>Video recap links: <a href= https://www.dropbox.com/s/y3skxivn9l63i9z/MathLing2020-PAC%20Learning%206-25_pt1.mp4?dl=0/>Part 1</a>, <a href= https://www.dropbox.com/s/aa1unmi1u23emkx/MathLing2020-PAC%20Learning-06-25_pt2.mp4?dl=0/>Part2</a></td>
             </tr>
             <tr>
                 <td>7/9</td> <td> Bayesian learning </td> <td>Wenyue</td> <td></td
