--- a/mathling/index.html
+++ b/mathling/index.html
@@ -69,7 +69,7 @@
                 <td><b>Date</b></td> <td><b>Topic</b></td> <td><b>Presenter</b></td> <td><b>Notes</b></td>
             </tr>
             <tr>
-                <td>6/25</td> <td> PAC learning </td> <td>Huteng</td> <td><a href= https://www.dropbox.com/s/va8p0s803qfwd1i/Slides__PAC_learning.pdf?dl=0/>Slides</a>, Video recap links: <a href= https://www.dropbox.com/s/y3skxivn9l63i9z/MathLing2020-PAC%20Learning%206-25_pt1.mp4?dl=0/>Part 1</a>, <a href= https://www.dropbox.com/s/aa1unmi1u23emkx/MathLing2020-PAC%20Learning-06-25_pt2.mp4?dl=0/>Part2</a></td>
+                <td>6/25</td> <td><a href= https://www.dropbox.com/s/va8p0s803qfwd1i/Slides__PAC_learning.pdf?dl=0/>PAC learning</a></td> <td>Huteng</td> <td>Video recap links: <a href= https://www.dropbox.com/s/y3skxivn9l63i9z/MathLing2020-PAC%20Learning%206-25_pt1.mp4?dl=0/>Part 1</a>, <a href= https://www.dropbox.com/s/aa1unmi1u23emkx/MathLing2020-PAC%20Learning-06-25_pt2.mp4?dl=0/>Part2</a></td>
             </tr>
             <tr>
                 <td>7/9</td> <td> Bayesian learning </td> <td>Wenyue</td> <td></td
@@ -113,13 +113,10 @@
                 <td><b>Date</b></td> <td><b>Topic</b></td> <td><b>Presenter</b></td> <td><b>Notes</b></td>
             </tr>
             <tr>
-                <td>2/13</td> <td> BMRS and composition </td> <td>Chris</td> <td>2-3pm</td>
+                <td>2/13</td> <a href="https://adamjardine.net/files/bhaskaretalBMRSms.pdf">BMRS and composition </a></td> <td>Chris</td> <td>2-3pm</td>
             </tr>
             <tr>
                 <td>2/20</td> <td> Open house practice <td>Nate & Dine</td> <td>2-3pm</td>
-            </tr>
-            <tr>
-                <td></td> <td> <a href="https://adamjardine.net/files/bhaskaretalBMRSms.pdf">BMRS and composition </a></td> <td>Chris</td> <td></td>
             </tr>
             <tr>
                 <td>2/27</td> <td>  </td> <td></td> <td>No meeting; open house</td>
