--- a/mathling/index.html
+++ b/mathling/index.html
@@ -113,7 +113,7 @@
                 <td><b>Date</b></td> <td><b>Topic</b></td> <td><b>Presenter</b></td> <td><b>Notes</b></td>
             </tr>
             <tr>
-                <td>2/13</td> <a href="https://adamjardine.net/files/bhaskaretalBMRSms.pdf">BMRS and composition </a></td> <td>Chris</td> <td>2-3pm</td>
+                <td>2/13</td> <td><a href="https://adamjardine.net/files/bhaskaretalBMRSms.pdf">BMRS and composition </a></td> <td>Chris</td> <td>2-3pm</td>
             </tr>
             <tr>
                 <td>2/20</td> <td> Open house practice <td>Nate & Dine</td> <td>2-3pm</td>
