--- a/mathling/index.html
+++ b/mathling/index.html
@@ -72,7 +72,8 @@
                 <td>6/25</td> <td><a href= https://www.dropbox.com/s/va8p0s803qfwd1i/Slides__PAC_learning.pdf?dl=0/>PAC learning</a></td> <td>Huteng</td> <td>Video recap links: <a href= https://www.dropbox.com/s/y3skxivn9l63i9z/MathLing2020-PAC%20Learning%206-25_pt1.mp4?dl=0/>Part 1</a>, <a href= https://www.dropbox.com/s/aa1unmi1u23emkx/MathLing2020-PAC%20Learning-06-25_pt2.mp4?dl=0/>Part 2</a></td>
             </tr>
             <tr>
-              <td>7/9</td> <td><a href= https://hackmd.io/7iRWdy-9Ra25M9nDwKQrUA/>Bayesian learning</a></td> <td>Wenyue</td> <td></td>
+                <td>7/9</td> <td><a href= https://hackmd.io/7iRWdy-9Ra25M9nDwKQrUA/>Bayesian learning</a></td> <td>Wenyue</td>
+                <td><a href="https://hackmd.io/7iRWdy-9Ra25M9nDwKQrUA">Meeting notes</a></td>
             </tr>
             <tr>
                 <td>7/23</td> <td> TBD </td>
