add resources to Bayesian learning
add links to textbook and supplementary resources for Bayesian networks

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -73,7 +73,7 @@
             </tr>
             <tr>
                 <td>7/9</td> <td><a href= https://hackmd.io/7iRWdy-9Ra25M9nDwKQrUA/>Bayesian learning</a></td> <td>Wenyue</td>
-                <td><a href="https://hackmd.io/7iRWdy-9Ra25M9nDwKQrUA">Meeting notes</a></td>
+                <td><a href="https://www.dropbox.com/s/zg20yppg5ua7mtl/Adnan%20Darwiche%20-%20Modeling%20and%20Reasoning%20with%20Bayesian%20Networks-Cambridge%20University%20Press%20%282009%29.pdf?dl=0">Reading</a>, <a href="https://gist.github.com/emeinhardt/b8a14be4464220f5b520ec72d676a0fe">Supplementary Resources</a></td>
             </tr>
             <tr>
                 <td>7/23</td> <td> TBD </td>
