--- a/mathling/index.html
+++ b/mathling/index.html
@@ -76,7 +76,7 @@
                 <td><a href="https://www.dropbox.com/s/zg20yppg5ua7mtl/Adnan%20Darwiche%20-%20Modeling%20and%20Reasoning%20with%20Bayesian%20Networks-Cambridge%20University%20Press%20%282009%29.pdf?dl=0">Reading</a>, <a href="https://gist.github.com/emeinhardt/b8a14be4464220f5b520ec72d676a0fe">Supplementary Resources</a></td>
             </tr>
             <tr>
-                <td>7/23</td> <td> TBD </td>
+                <td>7/23</td> <td> Neural networks </td>
             </tr>
             <tr>
                 <td>8/6</td> <td> TBD </td>
