add hackmd tutorial

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -79,6 +79,9 @@
                 <td>7/23</td> <td> Neural networks </td>
             </tr>
             <tr>
+                <td></td> <td></td> <td></td> <td><a href= https://hackmd.io/5PcCN00tSmazxg7zvsXiXg?both/>HackMD Tutorial</a></td>
+            </tr>
+            <tr>
                 <td>8/6</td> <td> TBD </td>
             </tr>
             <tr>
