add names for neural network pres

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -79,7 +79,7 @@
                 <td></td> <td></td> <td></td> <td><a href= https://hackmd.io/c/tutorials/%2Fs%2Ftutorials/>HackMD Tutorial</a></td>
             </tr>
             <tr>
-                <td>7/23</td> <td> Neural networks </td>
+              <td>7/23</td> <td> Neural networks </td> <td> Eileen and Karen </td>
             </tr>
             <tr>
                 <td>8/6</td> <td> TBD </td>
