--- a/mathling/index.html
+++ b/mathling/index.html
@@ -79,7 +79,7 @@
                 <td></td> <td></td> <td></td> <td><a href= https://hackmd.io/c/tutorials/%2Fs%2Ftutorials/>HackMD Tutorial</a></td>
             </tr>
             <tr>
-              <td>7/23</td> <td><a href= "https://www.dropbox.com/s/uywoaap8iryim8u/MathLing%20Summer2020-%20Neural%20Networks.pdf.pdf?dl=0">Neural networks</a></td> <td> Eileen and Karen </td>
+              <td>7/23</td> <td><a href= "https://www.dropbox.com/s/uywoaap8iryim8u/MathLing%20Summer2020-%20Neural%20Networks.pdf.pdf?dl=0">Neural networks</a></td> <td> Eileen and Karen </td> <td><a href= "https://demo.allennlp.org/masked-lm?text=The%20doctor%20ran%20to%20the%20emergency%20room%20to%20see%20%5BMASK%5D%20patient">BERT Demo</a></td>
             </tr>
             <tr>
                 <td>8/6</td> <td> TBD </td>
