add last two topics
add topics and presenters for last two Summer2020 MathLing meetings

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -82,10 +82,10 @@
               <td>7/23</td> <td><a href= "https://www.dropbox.com/s/uywoaap8iryim8u/MathLing%20Summer2020-%20Neural%20Networks.pdf.pdf?dl=0">Neural networks</a></td> <td> Eileen and Karen </td> <td><a href= "https://demo.allennlp.org/masked-lm?text=The%20doctor%20ran%20to%20the%20emergency%20room%20to%20see%20%5BMASK%5D%20patient">BERT Demo</a></td>
             </tr>
             <tr>
-                <td>8/6</td> <td> TBD </td>
+              <td>8/6</td> <td>Neural Nets with automata</td> <td>Jon</td>
             </tr>
             <tr>
-                <td>8/20</td> <td> TBD </td>
+              <td>8/20</td> <td>Hidden Markhov Models</td> <td>Huteng</td>
             </tr>
         </table>
 
