--- a/mathling/index.html
+++ b/mathling/index.html
@@ -82,7 +82,7 @@
               <td>7/23</td> <td><a href= "https://www.dropbox.com/s/uywoaap8iryim8u/MathLing%20Summer2020-%20Neural%20Networks.pdf.pdf?dl=0">Neural networks</a></td> <td> Eileen and Karen </td> <td><a href= "https://demo.allennlp.org/masked-lm?text=The%20doctor%20ran%20to%20the%20emergency%20room%20to%20see%20%5BMASK%5D%20patient">BERT Demo</a>, <a href= "https://colab.research.google.com/drive/1ywsvwO6thOVOrfagjjfuxEf6xVRxbUNO">BERT code</a></td>
             </tr>
             <tr>
-                <td></td> <td></td> <td></td> <td><a href= "https://www.dropbox.com/s/a37naaoxxx1lemf/MathLing%20Summer2020-Neural%20Networks%202020-07-23-10-35-57.mp4?dl=0">Video Recap</a></td>
+                <td></td> <td></td> <td></td> <td><a href= "https://www.dropbox.com/s/a37naaoxxx1lemf/MathLing%20Summer2020-Neural%20Networks%202020-07-23-10-35-57.mp4?dl=0">Video Recap</a>, <a href= "http://neuralnetworksanddeeplearning.com/index.html">Online Book</a></td>
             </tr>
             <tr>
               <td>8/6</td> <td><a href= "https://www.dropbox.com/s/j8ddxucx88s460v/rawski-nnautomata_slides.pdf?dl=0">Neural Nets with automata</a></td> <td>Jon</td> <td><a href= "https://www.dropbox.com/s/puw0yre0q18mk7u/MathLing%20Summer2020-Neural%20Nets%20with%20automata%202020-08-06-10-35-45.mp4?dl=0">Video Recap</a>, <a href= "https://github.com/MaxAndrewNelson/Neural-Reduplication">RNN Github Repo</a></td>
