--- a/mathling/index.html
+++ b/mathling/index.html
@@ -91,7 +91,7 @@
               <td></td> <td></td> <td></td> <td>Reading Links: <a href= "https://www.jrawski.info/publication/ndrp-scil-2020-neural/">Nelson, et al. (2020)</a>, <a href= "https://arxiv.org/pdf/2004.08500.pdf">Merrill, et al. (2020)</a>, <a href= "http://proceedings.mlr.press/v89/rabusseau19a/rabusseau19a.pdf">Rabusseau, Li, & Precup (2019)</a></td>
             </tr>
             <tr>
-              <td>8/20</td> <td>Hidden Markhov Models</td> <td>Huteng</td>
+              <td>8/20</td> <td><a href= "https://www.dropbox.com/s/5hf1q6w3gmrckmj/Dai_Slide__HMM.pdf?dl=0">Hidden Markhov Models</a></td> <td>Huteng</td>
             </tr>
         </table>
 
