add HMM resources
video, Jupyter Notebook, readings

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -91,7 +91,10 @@
               <td></td> <td></td> <td></td> <td>Reading Links: <a href= "https://www.jrawski.info/publication/ndrp-scil-2020-neural/">Nelson, et al. (2020)</a>, <a href= "https://arxiv.org/pdf/2004.08500.pdf">Merrill, et al. (2020)</a>, <a href= "http://proceedings.mlr.press/v89/rabusseau19a/rabusseau19a.pdf">Rabusseau, Li, & Precup (2019)</a></td>
             </tr>
             <tr>
-              <td>8/20</td> <td><a href= "https://www.dropbox.com/s/5hf1q6w3gmrckmj/Dai_Slide__HMM.pdf?dl=0">Hidden Markhov Models</a></td> <td>Huteng</td>
+              <td>8/20</td> <td><a href= "https://www.dropbox.com/s/5hf1q6w3gmrckmj/Dai_Slide__HMM.pdf?dl=0">Hidden Markhov Models</a></td> <td>Huteng</td> <td><a href= "https://www.dropbox.com/s/ia4gmm8l71f2yp0/MathLing%20Summer2020-Hidden%20Markhov%20Models%202020-08-20-10-39-37.mp4?dl=0">Video Recap</a>, <a href= "https://colab.research.google.com/drive/1IUe9lfoIiQsL49atSOgxnCmMR_zJazKI">Implementation (Jupyter Notebook)</a></td>
+            </tr>
+            <tr>
+              <td></td> <td></td> <td></td> <td> Reading Links: <a href= "https://web.stanford.edu/~jurafsky/slp3/A.pdf">Jurafsky & Martin (2019), Ch.A</a>, <a href= "https://web.ece.ucsb.edu/Faculty/Rabiner/ece259/Reprints/tutorial%20on%20hmm%20and%20applications.pdf">Rabiner (1989)</a></td>
             </tr>
         </table>
 
