--- a/mathling/index.html
+++ b/mathling/index.html
@@ -65,28 +65,52 @@
 	<tr>
 		<td><b>Date</b></td> <td><b>Topic</b></td> <td><b>Presenter(s)</b></td> <td><b>Affiliation</b></td> <td><b>Files</b></td> 
 	</tr>
-	<tr>
+	<!-- Scott -->
+	<tr>	
 		<td>9/25</td> 
 		<td>NDEB Transformations</td> 
 		<td><a href= "https://snelson89.bitbucket.io/index.html">Scott Nelson</a></td> 
 		<td>Stony Brook</td>
 		<td> </td>
 	</tr>
-  <tr>
+	
+	<!-- Jon and Dakota -->
+  	<tr>	
 		<td>10/2</td> 
 		<td>Subregular Waffle </td> 
 		<td><a href= "https://vvulpes0.github.io/">Dakota Lambert</a>, 
-				<a href="https://www.jrawski.info/">Jon Rawski</a></td>
-    <td>Stony Brook</td>
+			<a href="https://www.jrawski.info/">Jon Rawski</a></td>
+   		<td>Stony Brook</td>
 		<td></td>
 	</tr>
-	<tr>
+	
+	<!-- Eileen -->
+	<tr>	
 		<td>10/16</td> 
 		<td>Vowel Harmony/Sour Grapes </td> 
 		<td> <a href= "https://www.eileenrblum.com/">Eileen Blum</a></td> 
 		<td>Rutgers</td>
 		<td><a href="https://drive.google.com/file/d/1huLwXBu_krBpYNK2Mb1ySsheCZM-a_tu/view", target="_blank">slides</a></td>
 	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td><b>Relevant Papers:</b></td>
+		<td>Smith & Ohara (2019). Computational Complexity and Sour-Grapes-Like Patterns.
+			<a href="https://pages.jh.edu/~csmit372/pdf/oharasmith_amp2018_paper.pdf", target="_blank">pdf</a></td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td></td>
+		<td>Gainor, Lai, & Heinz (2012). Computational Characterizations of Vowel Harmony Patterns and Pathologies.
+			<a href="http://www.lingref.com/cpp/wccfl/29/paper2688.pdf", target="_blank">pdf</a></td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td></td>
+		<td>Koser & Jardine (2019). The complexity of optimizing over strictly local constraints.
+			<a href="https://nate-koser.github.io/files/plc2019proc.pdf", target="_blank">pdf</a></td>
+	</tr>
+	
 	<tr>
 		<td>10/23</td> 
 		<td></td> 
