--- a/mathling/index.html
+++ b/mathling/index.html
@@ -95,20 +95,20 @@
 	<tr>	<!-- Reading -->
 		<td></td>
 		<td><b>Relevant Papers:</b></td>
-		<td>Smith & Ohara (2019). Computational Complexity and Sour-Grapes-Like Patterns.
-			<a href="https://pages.jh.edu/~csmit372/pdf/oharasmith_amp2018_paper.pdf", target="_blank">pdf</a></td>
+		<td colspan="3"><small>Smith & Ohara (2019). Computational Complexity and Sour-Grapes-Like Patterns.
+			<a href="https://pages.jh.edu/~csmit372/pdf/oharasmith_amp2018_paper.pdf", target="_blank">pdf</a></small></td>
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
 		<td></td>
-		<td>Gainor, Lai, & Heinz (2012). Computational Characterizations of Vowel Harmony Patterns and Pathologies.
-			<a href="http://www.lingref.com/cpp/wccfl/29/paper2688.pdf", target="_blank">pdf</a></td>
+		<td colspan="3"><small>Gainor, Lai, & Heinz (2012). Computational Characterizations of Vowel Harmony Patterns and Pathologies.
+			<a href="http://www.lingref.com/cpp/wccfl/29/paper2688.pdf", target="_blank">pdf</a></small></td>
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
 		<td></td>
-		<td>Koser & Jardine (2019). The complexity of optimizing over strictly local constraints.
-			<a href="https://nate-koser.github.io/files/plc2019proc.pdf", target="_blank">pdf</a></td>
+		<td colspan="3"><small>Koser & Jardine (2019). The complexity of optimizing over strictly local constraints.
+			<a href="https://nate-koser.github.io/files/plc2019proc.pdf", target="_blank">pdf</a></small></td>
 	</tr>
 	
 	<tr>
