--- a/mathling/index.html
+++ b/mathling/index.html
@@ -61,7 +61,7 @@
 	Fridays 3:00 -- 4:00pm (EST) on Zoom.<br/>
 	Meetings for fall semester are merged with <a href="https://linguistics.stonybrook.edu/about/index.php">Stony Brook Department of Linguistics</a><br>
 </p>
-<table>
+<table style="white-space:nowrap;">
 	<tr>
 		<td><b>Date</b></td> <td><b>Topic</b></td> <td><b>Presenter(s)</b></td> <td><b>Affiliation</b></td> <td><b>Files</b></td> 
 	</tr>
