--- a/mathling/index.html
+++ b/mathling/index.html
@@ -94,10 +94,6 @@
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
-		<td>Relevant Papers:</td>
-	</tr>
-	<tr>
-		<td></td>
 		<td colspan="4"><small>Smith & Ohara (2019). Computational Complexity and Sour-Grapes-Like Patterns.
 				<a href="https://pages.jh.edu/~csmit372/pdf/oharasmith_amp2018_paper.pdf", target="_blank">pdf</a></small></td>
 	</tr>
@@ -134,7 +130,7 @@
 		<td></td>
 	</tr>
 </table>
-To claim an open spots contact Tatevik (tatevik.yolyan@rutgers.edu) and Natasha (n.chemey@rutgers.edu)
+To claim an open spot contact Tatevik (tatevik.yolyan@rutgers.edu) and Natasha (n.chemey@rutgers.edu)
 
 <hr>
 
