Addition: Scott's Handout

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -71,7 +71,7 @@
 		<td>NDEB Transformations</td> 
 		<td><a href= "https://snelson89.bitbucket.io/index.html">Scott Nelson</a></td> 
 		<td>Stony Brook</td>
-		<td> </td>
+		<td><a href="https://drive.google.com/file/d/1sLd6__VnDp_fUQ3B2y-ZHrTfBVMNM9jM/view", target="_blank">handout</a></td>
 	</tr>
 	
 	<!-- Jon and Dakota -->
