--- a/mathling/index.html
+++ b/mathling/index.html
@@ -69,7 +69,7 @@
 	<tr>	
 		<td>9/25</td> 
 		<td>NDEB Transformations</td> 
-		<td><a href= "https://snelson89.bitbucket.io/index.html">Scott Nelson</a></td> 
+		<td><a href= "https://snelson89.bitbucket.io/index.html", target="_blank">Scott Nelson</a></td> 
 		<td>Stony Brook</td>
 		<td><a href="https://drive.google.com/file/d/1sLd6__VnDp_fUQ3B2y-ZHrTfBVMNM9jM/view", target="_blank">handout</a></td>
 	</tr>
@@ -78,8 +78,8 @@
   	<tr>	
 		<td>10/2</td> 
 		<td>Subregular Waffle </td> 
-		<td><a href= "https://vvulpes0.github.io/">Dakota Lambert</a>, 
-			<a href="https://www.jrawski.info/">Jon Rawski</a></td>
+		<td><a href= "https://vvulpes0.github.io/", target="_blank">Dakota Lambert</a>, 
+			<a href="https://www.jrawski.info/", target="_blank">Jon Rawski</a></td>
    		<td>Stony Brook</td>
 		<td></td>
 	</tr>
@@ -88,7 +88,7 @@
 	<tr>	
 		<td>10/16</td> 
 		<td>Vowel Harmony/Sour Grapes </td> 
-		<td> <a href= "https://www.eileenrblum.com/">Eileen Blum</a></td> 
+		<td> <a href= "https://www.eileenrblum.com/", target="_blank">Eileen Blum</a></td> 
 		<td>Rutgers</td>
 		<td><a href="https://drive.google.com/file/d/1huLwXBu_krBpYNK2Mb1ySsheCZM-a_tu/view", target="_blank">slides</a></td>
 	</tr>
@@ -108,13 +108,28 @@
 				<a href="https://nate-koser.github.io/files/plc2019proc.pdf", target="_blank">pdf</a></small></td>
 	</tr>
 	
-	<tr>
+	<!-- Natasha -->
+	<tr>	
 		<td>10/23</td> 
+		<td>Learning Biases</td> 
+		<td><a href="https://www.nchemey.com/", target="_blank">Natasha Chemey</a></td> 
+		<td>Rutgers</td>
+		<td></td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td colspan="4"><small>Durvasula & Liter (2020). There is a simplicity bias when generalizing from ambiguous data.
+				<a href="https://ling.auf.net/lingbuzz/005120", target="_blank">lingbuzz</a></small></td>
+	</tr>
+	
+	<tr>
+		<td>10/30</td> 
 		<td></td> 
 		<td></td> 
 		<td></td>
 		<td></td>
 	</tr>
+	
 	<tr>
 		<td>11/6</td> 
 		<td></td> 
