--- a/mathling/index.html
+++ b/mathling/index.html
@@ -134,12 +134,19 @@ a:hover {
 				<a href="https://ling.auf.net/lingbuzz/005120", target="_blank">lingbuzz</a></small></td>
 	</tr>
 	
+	<!-- Brian -->
 	<tr>
 		<td>10/30</td> 
 		<td></td> 
-		<td></td> 
+		<td><a href="https://sites.math.rutgers.edu/~bp466/", target="_blank">Brian Pinsky</a></td> 
+		<td>Rutgers</td>
 		<td></td>
+	</tr>
+	<tr>	<!-- Reading -->
 		<td></td>
+		<td colspan="4"><small>Coecke, Sadrzadeh & Clark (2010). 
+					Mathematical Foundations for a Compositional Distributional Model of Meaning.
+					<a href="https://arxiv.org/pdf/1003.4394.pdf", target="_blank">pdf</a></small></td>
 	</tr>
 	
 	<tr>
