--- a/mathling/index.html
+++ b/mathling/index.html
@@ -151,20 +151,21 @@ a:hover {
 	
 	<tr>
 		<td>11/6</td> 
-		<td></td> 
+		<td>"Coffee Break"</td> 
 		<td></td> 
 		<td></td>
 		<td></td>
 	</tr>
+	
+	<!-- Magdalena --> 
 	<tr>
 		<td>11/13</td> 
 		<td></td> 
-		<td></td> 
-		<td></td>
+		<td><p style="color:#B82814">Magdalena Markowska</p></td> 
+		<td>Stony Brook</td>
 		<td></td>
 	</tr>
 </table>
-To claim an open spot contact Tatevik (tatevik.yolyan@rutgers.edu) and Natasha (n.chemey@rutgers.edu)
 
 <hr>
 
