--- a/mathling/index.html
+++ b/mathling/index.html
@@ -157,12 +157,14 @@ a:hover {
 		<td></td>
 	</tr>
 	
-	<!-- Magdalena --> 
+	<!-- Magdalena, Amber --> 
 	<tr>
 		<td>11/13</td> 
-		<td></td> 
-		<td><p style="color:#B82814">Magdalena Markowska</p></td> 
-		<td>Stony Brook</td>
+		<td>Code Switching</td> 
+		<td><p style="color:#B82814">Magdalena Markowska</p>, 
+			<a href="https://qihuixu.wixsite.com/qihui", target="_blank">Qihui Xu</a>
+		</td> 
+		<td>Stony Brook, CUNY</td>
 		<td></td>
 	</tr>
 </table>
