--- a/mathling/index.html
+++ b/mathling/index.html
@@ -99,7 +99,7 @@ a:hover {
 	<!-- Eileen -->
 	<tr>	
 		<td>10/16</td> 
-		<td>Vowel Harmony/Sour Grapes </td> 
+		<td>Sour Grapes </td> 
 		<td> <a href= "https://www.eileenrblum.com/", target="_blank">Eileen Blum</a></td> 
 		<td>Rutgers</td>
 		<td><a href="https://drive.google.com/file/d/1huLwXBu_krBpYNK2Mb1ySsheCZM-a_tu/view", target="_blank">slides</a></td>
@@ -268,7 +268,6 @@ a:hover {
 
 
     <!-- <p class="footer"> -->
-    <!-- Last updated: Jul 13 2019<br> -->
     <!-- </p> -->
 </body>
 </html>
