--- a/mathling/index.html
+++ b/mathling/index.html
@@ -161,8 +161,8 @@ a:hover {
 	<tr>
 		<td>11/13</td> 
 		<td>Code Switching</td> 
-		<td><p style="color:#B82814">Magdalena Markowska</p>, 
-			<a href="https://qihuixu.wixsite.com/qihui", target="_blank">Qihui Xu</a>
+		<td><p style="color:#B82814">Magdalena Markowska, 
+			<a href="https://qihuixu.wixsite.com/qihui", target="_blank">Qihui Xu</a></p>
 		</td> 
 		<td>Stony Brook, CUNY</td>
 		<td></td>
