--- a/mathling/index.html
+++ b/mathling/index.html
@@ -165,7 +165,7 @@ a:hover {
 			<a href="https://qihuixu.wixsite.com/qihui", target="_blank">Qihui Xu</a></p>
 		</td> 
 		<td>Stony Brook, CUNY</td>
-		<td></td>
+		<td><a href="https://drive.google.com/file/d/1AE7VwrCoW-th-bdyjMpahEkz6iTrGujH/view", target="_blank">slides</a></td>
 	</tr>
 </table>
 
