--- a/mathling/index.html
+++ b/mathling/index.html
@@ -66,7 +66,7 @@ a:hover {
 <!-- <hr> -->
 
 <p><b> Fall 2020 Schedule</b><br/>
-	Fridays 3:00 -- 4:00pm (EST) on Zoom.<br/>
+	Fridays 3:00 -- 4:30pm (EST) on Zoom.<br/>
 	Meetings for fall semester are merged with <a href="https://linguistics.stonybrook.edu/about/index.php">Stony Brook Department of Linguistics</a><br>
 </p>
 <table style="white-space:nowrap;">
@@ -137,7 +137,7 @@ a:hover {
 	<!-- Brian -->
 	<tr>
 		<td>10/30</td> 
-		<td></td> 
+		<td>Pregroup Grammar Semantics</td> 
 		<td><a href="https://sites.math.rutgers.edu/~bp466/", target="_blank">Brian Pinsky</a></td> 
 		<td>Rutgers</td>
 		<td></td>
