--- a/mathling/index.html
+++ b/mathling/index.html
@@ -59,11 +59,33 @@ a:hover {
 
 
 <hr>
-
-<!-- News/etc -->
-       
-        
-<!-- <hr> -->
+	
+<p style="color:#B82814"><b>News</b><br/>
+	First meeting for Spring 2021 will be on Tuesday February 2nd, at 3PM. 		
+<hr>
+	
+	
+	
+<p><b> Spring 2021 Schedule</b><br/>
+	Tuesdays 3:00 -- 4:00pm (EST) on Zoom.<br/>
+	Meetings for spring semester are merged with <a href="https://linguistics.stonybrook.edu/about/index.php">Stony Brook Department of Linguistics</a><br>
+</p>
+<table style="white-space:nowrap;">
+	<tr>
+		<th>Date</th> 
+		<th>Topic</th> 
+		<th>Speaker(s)</th> 
+		<th>Affiliation</th> 
+		<th>Files</th> 
+	</tr>
+	<tr>
+		<th>02/02</th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+	</tr>
+<\table>
 
 <p><b> Fall 2020 Schedule</b><br/>
 	Fridays 3:00 -- 4:30pm (EST) on Zoom.<br/>
