--- a/mathling/index.html
+++ b/mathling/index.html
@@ -78,11 +78,12 @@ a:hover {
 		<th>Affiliation</th> 
 		<th>Files</th> 
 	</tr>
+	<!-- Jeff and Jon -->
 	<tr>
-		<td>02/02</td>
-		<td></td>
-		<td></td>
-		<td></td>
+		<td>02/09</td>
+		<td>Generalized FSA</td>
+		<td>Jeff Heinz, Jon Rawski</td>
+		<td>Stony Brook</td>
 		<td></td>
 	</tr>
 </table>
