--- a/mathling/index.html
+++ b/mathling/index.html
@@ -78,13 +78,32 @@ a:hover {
 		<th>Affiliation</th> 
 		<th>Files</th> 
 	</tr>
-	<!-- Jeff and Jon -->
+	<!-- Jeff, Jon, Dakota -->
 	<tr>
 		<td>02/09</td>
 		<td>Generalized FSA</td>
-		<td>Jeff Heinz, Jon Rawski</td>
+		<td>Jeff Heinz, Jon Rawski, Dakota Lambert</td>
 		<td>Stony Brook</td>
 		<td></td>
+	</tr>
+	<!-- Adam, Chris -->
+	<tr>
+		<td>02/23</td>
+		<td>BMRS Primer</td>
+		<td>Adam Jardine,  Chris Oakden</td>
+		<td>Rutgers</td>
+		<td><a href="https://drive.google.com/file/d/1_1sc_T-7fUvkDhj68MWIHF8M2RoZEAuO/view", target="_blank">handout</a></td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td colspan="4"><small>Chandlee & Jardine (2021). Recursive schemes for phonological analysis
+				<a href="http://adamjardine.net/files/chandleejardineBMRSms.pdf", target="_blank">pdf</a></small></td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td colspan="4"><small>Bhaskar, Chandlee, Jardine, & Oakden (2020). 
+					Boolean monadic recursive schemes as a logical characterization of the subsequential functions
+				<a href="http://adamjardine.net/files/bhaskaretalBMRSms.pdf", target="_blank">pdf</a></small></td>
 	</tr>
 </table>
 
