--- a/mathling/index.html
+++ b/mathling/index.html
@@ -31,9 +31,10 @@ a:hover {
 
 <h1 id="rucll">Rutgers MathLing Group</h1>
 
+	
 <!-- Group description -->
 <div style="min-height:500px">
-	<p>This is an informal reading group for mathematical and computational linguistics discussions. We are affiliated with the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a> and the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a>.</p>
+<p>This is an informal reading group for mathematical and computational linguistics discussions. We are affiliated with the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a> and the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a>.</p>
   <table>
     <tr>
        <td><b>Faculty advisor:</b></td>
@@ -41,8 +42,10 @@ a:hover {
     </tr>
     <tr>
       <td><b>Student organizers:</b></td>
-      <td><p style="color:#B82814"><a href="https://www.nchemey.com/">Natasha Chemey</a><br>
-	      Tatevik Yolyan</p>
+      <td><p style="color:#B82814">
+	      <a href="https://www.nchemey.com/">Natasha Chemey</a><br>
+	      Tatevik Yolyan
+	  </p>
       </td>
     </tr>
     <tr>
@@ -82,7 +85,10 @@ a:hover {
 	<tr>
 		<td>02/09</td>
 		<td>Generalized FSA</td>
-		<td>Jeff Heinz, Jon Rawski, Dakota Lambert</td>
+		<td><a href="http://jeffreyheinz.net/", target="_blank">Jeff Heinz</a>, 
+			<a href="https://www.jrawski.info/", target="_blank">Jon Rawski</a>
+			<a href= "https://vvulpes0.github.io/", target="_blank">Dakota Lambert</a>
+		</td>
 		<td>Stony Brook</td>
 		<td></td>
 	</tr>
@@ -90,20 +96,32 @@ a:hover {
 	<tr>
 		<td>02/23</td>
 		<td>BMRS Primer</td>
-		<td>Adam Jardine,  Chris Oakden</td>
+		<td><a href="https://adamjardine.net/", target="_blank">Adam Jardine</a>, 
+			<a href="https://chrisoakden.com/", target="_blank">Chris Oakden</a>
+		</td>
 		<td>Rutgers</td>
 		<td><a href="https://drive.google.com/file/d/1_1sc_T-7fUvkDhj68MWIHF8M2RoZEAuO/view", target="_blank">handout</a></td>
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
 		<td colspan="4"><small>Chandlee & Jardine (2021). Recursive schemes for phonological analysis
-				<a href="http://adamjardine.net/files/chandleejardineBMRSms.pdf", target="_blank">pdf</a></small></td>
+				<a href="http://adamjardine.net/files/chandleejardineBMRSms.pdf", target="_blank">pdf</a></small>
+		</td>
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
 		<td colspan="4"><small>Bhaskar, Chandlee, Jardine, & Oakden (2020). 
-					Boolean monadic recursive schemes as a logical characterization of the subsequential functions
-				<a href="http://adamjardine.net/files/bhaskaretalBMRSms.pdf", target="_blank">pdf</a></small></td>
+					BMRSs as a logical characterization of the subsequential functions
+				<a href="http://adamjardine.net/files/bhaskaretalBMRSms.pdf", target="_blank">pdf</a></small>
+		</td>
+	</tr>
+	<!-- Andrija -->
+	<tr>
+		<td>03/02</td>
+		<td>BMRS Morphology</td>
+		<td><a href="https://andrija-petrovic.github.io/", target="_blank">Andrija Petrovic</a></td>
+		<td>Stony Brook</td>
+		<td></td>
 	</tr>
 </table>
 
