--- a/mathling/index.html
+++ b/mathling/index.html
@@ -92,6 +92,7 @@ a:hover {
 		<td>Stony Brook</td>
 		<td></td>
 	</tr>
+	
 	<!-- Adam, Chris -->
 	<tr>
 		<td>02/23</td>
@@ -115,6 +116,7 @@ a:hover {
 				<a href="http://adamjardine.net/files/bhaskaretalBMRSms.pdf", target="_blank">pdf</a></small>
 		</td>
 	</tr>
+	
 	<!-- Andrija -->
 	<tr>
 		<td>03/02</td>
@@ -122,6 +124,30 @@ a:hover {
 		<td><a href="https://andrija-petrovic.github.io/", target="_blank">Andrija Petrovic</a></td>
 		<td>Stony Brook</td>
 		<td></td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td colspan="4"><small>Andr&eacute;s(2014). Valencian hypocoristics: when morphology meets phonology. 
+				<a href="https://pdfs.semanticscholar.org/1355/0326faa9a617c8a01a083323676b078da60d.pdf", target="_blank">pdf</a></small>
+		</td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td colspan="4"><small>Andr&eacute;s(2013). Morphological Epenthesis in Romance: A Case for Lexical Conservatism. 
+				<a href="https://www.dce.unimore.it/site/home/dipartimento/archivio-eventi/igg39/home-igg39/documento900025971.html">download</a></small>
+		</td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td colspan="4"><small>Bachrach & Wagner (2007). Syntactically driven cyclicity vs. output-output correspondence
+				<a href="https://www.ling.upenn.edu/Events/PLC/plc30/abstracts/34.pdf", target="_blank">pdf</a></small>
+		</td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td colspan="4"><small>Repetti, Moradi, & Aronoff (2018). Epenthesis and Morphology in Romance.
+				<a href="https://github.com/somoradi/somoradi/blob/master/LSRL48IP.pdf", target="_blank">slides</a></small>
+		</td>
 	</tr>
 </table>
 
