--- a/mathling/index.html
+++ b/mathling/index.html
@@ -64,7 +64,7 @@ a:hover {
 <hr>
 	
 <p style="color:#B82814"><b>News</b><br/>
-	First meeting for Spring 2021 will be on Tuesday February 2nd, at 3PM. 		
+	
 <hr>
 	
 	
@@ -105,14 +105,14 @@ a:hover {
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
-		<td colspan="4"><small>Chandlee & Jardine (2021). Recursive schemes for phonological analysis
+		<td colspan="4"><small>Chandlee & Jardine (2021). Recursive schemes for phonological analysis.
 				<a href="http://adamjardine.net/files/chandleejardineBMRSms.pdf", target="_blank">pdf</a></small>
 		</td>
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
 		<td colspan="4"><small>Bhaskar, Chandlee, Jardine, & Oakden (2020). 
-					BMRSs as a logical characterization of the subsequential functions
+					BMRSs as a logical characterization of the subsequential functions.
 				<a href="http://adamjardine.net/files/bhaskaretalBMRSms.pdf", target="_blank">pdf</a></small>
 		</td>
 	</tr>
@@ -127,13 +127,13 @@ a:hover {
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
-		<td colspan="4"><small>Andr&eacute;s(2014). Valencian hypocoristics: when morphology meets phonology. 
+		<td colspan="4"><small>Andr&eacute;s (2014). Valencian hypocoristics: when morphology meets phonology. 
 				<a href="https://pdfs.semanticscholar.org/1355/0326faa9a617c8a01a083323676b078da60d.pdf", target="_blank">pdf</a></small>
 		</td>
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
-		<td colspan="4"><small>Andr&eacute;s(2013). Morphological Epenthesis in Romance: A Case for Lexical Conservatism. 
+		<td colspan="4"><small>Andr&eacute;s (2013). Morphological Epenthesis in Romance: A Case for Lexical Conservatism. 
 				<a href="https://www.dce.unimore.it/site/home/dipartimento/archivio-eventi/igg39/home-igg39/documento900025971.html">download</a></small>
 		</td>
 	</tr>
@@ -147,6 +147,21 @@ a:hover {
 		<td></td>
 		<td colspan="4"><small>Repetti, Moradi, & Aronoff (2018). Epenthesis and Morphology in Romance.
 				<a href="https://github.com/somoradi/somoradi/blob/master/LSRL48IP.pdf", target="_blank">slides</a></small>
+		</td>
+	</tr>
+	
+	<!-- Eileen -->
+	<tr>
+		<td>03/09</td>
+		<td>Vowel Harmony/Tutrugbu</td>
+		<td><a href="https://www.eileenrblum.com/", target="_blank">Eileen Blum</a></td>
+		<td>Rutgers</td>
+		<td></td>
+	</tr>
+	<tr>	<!-- Reading -->
+		<td></td>
+		<td colspan="4"><small>McCollum, Bakovic, Mai, & Meinhardt (2019). Unbounded circumambient patterns in segmental phonology
+				<a href="https://ling.auf.net/lingbuzz/005051", target="_blank">lingbuzz</a></small>
 		</td>
 	</tr>
 </table>
