--- a/mathling/index.html
+++ b/mathling/index.html
@@ -123,7 +123,7 @@ a:hover {
 		<td>BMRS Morphology</td>
 		<td><a href="https://andrija-petrovic.github.io/", target="_blank">Andrija Petrovic</a></td>
 		<td>Stony Brook</td>
-		<td></td>
+		<td><a href="https://drive.google.com/file/d/12585FApd5pUxBFmJ3fc6ZSlmMVBhemBj/view", target="_blank">slides</a></td>
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
