--- a/mathling/index.html
+++ b/mathling/index.html
@@ -139,30 +139,33 @@ a:hover {
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
-		<td colspan="4"><small>Bachrach & Wagner (2007). Syntactically driven cyclicity vs. output-output correspondence
+		<td colspan="4"><small>Bachrach & Wagner (2007). Syntactically driven cyclicity vs. output-output correspondence.
 				<a href="https://www.ling.upenn.edu/Events/PLC/plc30/abstracts/34.pdf", target="_blank">pdf</a></small>
-		</td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Repetti, Moradi, & Aronoff (2018). Epenthesis and Morphology in Romance.
-				<a href="https://github.com/somoradi/somoradi/blob/master/LSRL48IP.pdf", target="_blank">slides</a></small>
 		</td>
 	</tr>
 	
 	<!-- Eileen -->
 	<tr>
 		<td>03/09</td>
-		<td>Vowel Harmony/Tutrugbu</td>
+		<td>Vowel Harmony+Tutrugbu</td>
 		<td><a href="https://www.eileenrblum.com/", target="_blank">Eileen Blum</a></td>
 		<td>Rutgers</td>
 		<td></td>
 	</tr>
 	<tr>	<!-- Reading -->
 		<td></td>
-		<td colspan="4"><small>McCollum, Bakovic, Mai, & Meinhardt (2019). Unbounded circumambient patterns in segmental phonology
+		<td colspan="4"><small>McCollum, Bakovic, Mai, & Meinhardt (2019). Unbounded circumambient patterns in segmental phonology.
 				<a href="https://ling.auf.net/lingbuzz/005051", target="_blank">lingbuzz</a></small>
 		</td>
+	</tr>
+	
+	<!-- Andrew -->
+	<tr>
+		<td>03/23</td>
+		<td>OT+Context-Sensitive Languages</td>
+		<td><a href="https://aphonologist.github.io/", target="_blank">Andrew Lamont</a></td>
+		<td>UMass</td>
+		<td></td>
 	</tr>
 </table>
 
