--- a/mathling/index.html
+++ b/mathling/index.html
@@ -83,7 +83,7 @@ a:hover {
 	</tr>
 	<!-- Jeff, Jon, Dakota -->
 	<tr>
-		<td>02/09</td>
+		<td>2/9</td>
 		<td>Generalized FSA</td>
 		<td><a href="http://jeffreyheinz.net/", target="_blank">Jeff Heinz</a>, 
 			<a href="https://www.jrawski.info/", target="_blank">Jon Rawski</a>
@@ -95,7 +95,7 @@ a:hover {
 	
 	<!-- Adam, Chris -->
 	<tr>
-		<td>02/23</td>
+		<td>2/23</td>
 		<td>BMRS Primer</td>
 		<td><a href="https://adamjardine.net/", target="_blank">Adam Jardine</a>, 
 			<a href="https://chrisoakden.com/", target="_blank">Chris Oakden</a>
@@ -119,7 +119,7 @@ a:hover {
 	
 	<!-- Andrija -->
 	<tr>
-		<td>03/02</td>
+		<td>3/2</td>
 		<td>BMRS Morphology</td>
 		<td><a href="https://andrija-petrovic.github.io/", target="_blank">Andrija Petrovic</a></td>
 		<td>Stony Brook</td>
@@ -146,7 +146,7 @@ a:hover {
 	
 	<!-- Eileen -->
 	<tr>
-		<td>03/09</td>
+		<td>3/9</td>
 		<td>Vowel Harmony+Tutrugbu</td>
 		<td><a href="https://www.eileenrblum.com/", target="_blank">Eileen Blum</a></td>
 		<td>Rutgers</td>
@@ -161,10 +161,19 @@ a:hover {
 	
 	<!-- Andrew -->
 	<tr>
-		<td>03/23</td>
+		<td>3/23</td>
 		<td>OT+Context-Sensitive Languages</td>
 		<td><a href="https://aphonologist.github.io/", target="_blank">Andrew Lamont</a></td>
 		<td>UMass</td>
+		<td></td>
+	</tr>
+	
+	<!-- Nate -->
+	<tr>
+		<td>4/6</td>
+		<td>TBA</td>
+		<td><a href="https://nate-koser.github.io/", target="_blank">Nate Koser</a></td>
+		<td>Rutgers</td>
 		<td></td>
 	</tr>
 </table>
