--- a/mathling/index.html
+++ b/mathling/index.html
@@ -176,6 +176,33 @@ a:hover {
 		<td>Rutgers</td>
 		<td></td>
 	</tr>
+	
+	<!-- Eric -->
+	<tr>
+		<td>4/13</td>
+		<td></td>
+		<td><a href="https://sites.google.com/ucsd.edu/ebakovic/", target="_blank">Eric Bakovi&#263;</a></td>
+		<td>UCSD</td>
+		<td></td>
+	</tr>
+	
+	<!-- Scott -->
+	<tr>
+		<td>4/20</td>
+		<td></td>
+		<td><a href= "https://snelson89.bitbucket.io/index.html", target="_blank">Scott Nelson</a></td> 
+		<td>Stony Brook</td>
+		<td></td>
+	</tr>
+	
+	<!-- Sabine -->
+	<tr>
+		<td>4/27</td>
+		<td></td>
+		<td><a href= "https://sabine.laszakovits.net/", target="_blank">Sabine Laszakovits</a></td> 
+		<td>UConn</td>
+		<td></td>
+	</tr>
 </table>
 
 	
