--- a/mathling/index.html
+++ b/mathling/index.html
@@ -171,16 +171,16 @@ a:hover {
 	<!-- Nate -->
 	<tr>
 		<td>4/6</td>
-		<td>TBA</td>
+		<td>Atomic Properties of Stress</td>
 		<td><a href="https://nate-koser.github.io/", target="_blank">Nate Koser</a></td>
 		<td>Rutgers</td>
-		<td></td>
+		<td><a href="https://drive.google.com/file/d/1JbdFHoNBiOA1Jun-jJCo9Yo1IV_OxwnR/view", target="_blank">handout</a></td>
 	</tr>
 	
 	<!-- Eric -->
 	<tr>
 		<td>4/13</td>
-		<td></td>
+		<td>Weak Determinism</td>
 		<td><a href="https://sites.google.com/ucsd.edu/ebakovic/", target="_blank">Eric Bakovi&#263;</a></td>
 		<td>UCSD</td>
 		<td></td>
@@ -189,7 +189,7 @@ a:hover {
 	<!-- Scott -->
 	<tr>
 		<td>4/20</td>
-		<td></td>
+		<td>TBA</td>
 		<td><a href= "https://snelson89.bitbucket.io/index.html", target="_blank">Scott Nelson</a></td> 
 		<td>Stony Brook</td>
 		<td></td>
@@ -198,7 +198,7 @@ a:hover {
 	<!-- Sabine -->
 	<tr>
 		<td>4/27</td>
-		<td></td>
+		<td>TBA</td>
 		<td><a href= "https://sabine.laszakovits.net/", target="_blank">Sabine Laszakovits</a></td> 
 		<td>UConn</td>
 		<td></td>
