--- a/mathling/index.html
+++ b/mathling/index.html
@@ -181,10 +181,10 @@ a:hover {
 	<!-- Scott -->
 	<tr>
 		<td>4/20</td>
-		<td>TBA</td>
+		<td>Model Theory+Phhonological Features</td>
 		<td><a href= "https://snelson89.bitbucket.io/index.html", target="_blank">Scott Nelson</a></td> 
 		<td>Stony Brook</td>
-		<td></td>
+		<td><a href="https://drive.google.com/file/d/1iFY_RMymD7D8rp8IiYStP69VTWcmLWHU/view", target="_blank">handout</a></td>
 	</tr>
 	
 	<!-- Sabine -->
@@ -193,6 +193,15 @@ a:hover {
 		<td>TBA</td>
 		<td><a href= "https://sabine.laszakovits.net/", target="_blank">Sabine Laszakovits</a></td> 
 		<td>UConn</td>
+		<td></td>
+	</tr>
+	
+	<!-- Eric -->
+	<tr>
+		<td>5/4</td>
+		<td>Weak Determinism</td>
+		<td><a href= "https://sites.google.com/ucsd.edu/ebakovic/", target="_blank">Eric Bakovi&cacute;</a></td> 
+		<td>UCSD</td>
 		<td></td>
 	</tr>
 </table>
