--- a/mathling/index.html
+++ b/mathling/index.html
@@ -187,6 +187,15 @@ a:hover {
 		<td><a href="https://drive.google.com/file/d/1iFY_RMymD7D8rp8IiYStP69VTWcmLWHU/view", target="_blank">handout</a></td>
 	</tr>
 	
+	<!-- Charles -->
+	<tr>
+		<td>4/27</td>
+		<td>Logical Phonology</td>
+		<td><a href= "https://www.concordia.ca/artsci/cmll/faculty.html?fpid=charles-reiss", target="_blank">Charles Reiss</a></td> 
+		<td>Concordia</td>
+		<td></td>
+	</tr>
+	
 	
 	<!-- Eric -->
 	<tr>
