--- a/mathling/index.html
+++ b/mathling/index.html
@@ -193,7 +193,7 @@ a:hover {
 		<td>Logical Phonology</td>
 		<td><a href= "https://www.concordia.ca/artsci/cmll/faculty.html?fpid=charles-reiss", target="_blank">Charles Reiss</a></td> 
 		<td>Concordia</td>
-		<td></td>
+		<td><a href="https://drive.google.com/file/d/1iFY_RMymD7D8rp8IiYStP69VTWcmLWHU/view", target="_blank">handout</a></td>
 	</tr>
 	
 	
