--- a/mathling/index.html
+++ b/mathling/index.html
@@ -190,18 +190,27 @@ a:hover {
 	<!-- Charles -->
 	<tr>
 		<td>4/27</td>
-		<td>Logical Phonology</td>
+		<td>Some(what) Logical Phonology</td>
 		<td><a href= "https://www.concordia.ca/artsci/cmll/faculty.html?fpid=charles-reiss", target="_blank">Charles Reiss</a></td> 
 		<td>Concordia</td>
 		<td><a href="https://drive.google.com/file/d/1Gr23qcAJ7mwaMDR4q7NgCGgcwHoSGgwG/view", target="_blank">handout</a></td>
 	</tr>
 	
 	
-	<!-- Eric -->
+	<!-- Eric B-->
 	<tr>
 		<td>5/4</td>
 		<td>Weak Determinism</td>
 		<td><a href= "https://sites.google.com/ucsd.edu/ebakovic/", target="_blank">Eric Bakovi&cacute;</a></td> 
+		<td>UCSD</td>
+		<td></td>
+	</tr>
+	
+	<!-- Eric M-->
+	<tr>
+		<td>5/11</td>
+		<td>TBA</td>
+		<td><a href= "https://sites.google.com/view/eric-meinhardt/home", target="_blank">EEric Meinhardt</a></td> 
 		<td>UCSD</td>
 		<td></td>
 	</tr>
