--- a/mathling/index.html
+++ b/mathling/index.html
@@ -181,7 +181,7 @@ a:hover {
 	<!-- Scott -->
 	<tr>
 		<td>4/20</td>
-		<td>Model Theory+Phhonological Features</td>
+		<td>Model Theory+Phonological Features</td>
 		<td><a href= "https://snelson89.bitbucket.io/index.html", target="_blank">Scott Nelson</a></td> 
 		<td>Stony Brook</td>
 		<td><a href="https://drive.google.com/file/d/1iFY_RMymD7D8rp8IiYStP69VTWcmLWHU/view", target="_blank">handout</a></td>
@@ -210,7 +210,7 @@ a:hover {
 	<tr>
 		<td>5/11</td>
 		<td>TBA</td>
-		<td><a href= "https://sites.google.com/view/eric-meinhardt/home", target="_blank">EEric Meinhardt</a></td> 
+		<td><a href= "https://sites.google.com/view/eric-meinhardt/home", target="_blank">Eric Meinhardt</a></td> 
 		<td>UCSD</td>
 		<td></td>
 	</tr>
