--- a/mathling/index.html
+++ b/mathling/index.html
@@ -197,12 +197,16 @@ a:hover {
 	</tr>
 	
 	
-	<!-- Eric B-->
+	<!-- Eric B, Eric M, Anna, Adam M-->
 	<tr>
 		<td>5/4</td>
-		<td>Weak Determinism</td>
-		<td><a href= "https://sites.google.com/ucsd.edu/ebakovic/", target="_blank">Eric Bakovi&cacute;</a></td> 
-		<td>UCSD</td>
+		<td>Weak Determinism, Interaction, and BMRS</td>
+		<td><a href= "https://sites.google.com/ucsd.edu/ebakovic/", target="_blank">Eric Bakovi&cacute;</a>, 
+			<a href= "https://sites.google.com/view/eric-meinhardt/home", target="_blank">Eric Meinhardt</a>
+			<a href= "https://annamai.net", target="_blank">Anna Mai</a>, 
+			<a href= "http://adammccollum.net", target="_blank">Adam McCollum</a>, 
+		</td> 
+		<td>UCSD, Rutgers</td>
 		<td></td>
 	</tr>
 	
