--- a/mathling/index.html
+++ b/mathling/index.html
@@ -86,7 +86,7 @@ a:hover {
 		<td>2/9</td>
 		<td>Generalized FSA</td>
 		<td><a href="http://jeffreyheinz.net/", target="_blank">Jeff Heinz</a>, 
-			<a href="https://www.jrawski.info/", target="_blank">Jon Rawski</a>
+			<a href="https://www.jrawski.info/", target="_blank">Jon Rawski</a>,
 			<a href= "https://vvulpes0.github.io/", target="_blank">Dakota Lambert</a>
 		</td>
 		<td>Stony Brook</td>
@@ -204,7 +204,7 @@ a:hover {
 		<td><a href= "https://sites.google.com/ucsd.edu/ebakovic/", target="_blank">Eric Bakovi&cacute;</a>, 
 			<a href= "https://sites.google.com/view/eric-meinhardt/home", target="_blank">Eric Meinhardt</a>
 			<a href= "https://annamai.net", target="_blank">Anna Mai</a>, 
-			<a href= "http://adammccollum.net", target="_blank">Adam McCollum</a>, 
+			<a href= "http://adammccollum.net", target="_blank">Adam McCollum</a>
 		</td> 
 		<td>UCSD, Rutgers</td>
 		<td></td>
