--- a/mathling/index.html
+++ b/mathling/index.html
@@ -68,7 +68,7 @@ a:hover {
 <hr>
 	
 	
-	
+<!------- SPRING 2021 SCHEDULE  -------->	
 <p><b> Spring 2021 Schedule</b><br/>
 	Tuesdays 3:00 -- 4:00pm (EST) on Zoom.<br/>
 	Meetings for spring semester are merged with <a href="https://linguistics.stonybrook.edu/about/index.php">Stony Brook Department of Linguistics</a><br>
@@ -76,7 +76,7 @@ a:hover {
 <table style="white-space:nowrap;">
 	<tr>
 		<th>Date</th> 
-		<th>Topic</th> 
+		<th>Title</th> 
 		<th>Speaker(s)</th> 
 		<th>Affiliation</th> 
 		<th>Files</th> 
@@ -147,7 +147,7 @@ a:hover {
 	<!-- Eileen -->
 	<tr>
 		<td>3/9</td>
-		<td>Vowel Harmony+Tutrugbu</td>
+		<td>Vowel Harmony &#38; Tutrugbu</td>
 		<td><a href="https://www.eileenrblum.com/", target="_blank">Eileen Blum</a></td>
 		<td>Rutgers</td>
 		<td></td>
@@ -162,7 +162,7 @@ a:hover {
 	<!-- Andrew -->
 	<tr>
 		<td>3/23</td>
-		<td>OT+Context-Sensitive Languages</td>
+		<td>OT &#38; Context-Sensitive Languages</td>
 		<td><a href="https://aphonologist.github.io/", target="_blank">Andrew Lamont</a></td>
 		<td>UMass</td>
 		<td></td>
@@ -181,7 +181,7 @@ a:hover {
 	<!-- Scott -->
 	<tr>
 		<td>4/20</td>
-		<td>Model Theory+Phonological Features</td>
+		<td>Model Theory &#38; Phonological Features</td>
 		<td><a href= "https://snelson89.bitbucket.io/index.html", target="_blank">Scott Nelson</a></td> 
 		<td>Stony Brook</td>
 		<td><a href="https://drive.google.com/file/d/1iFY_RMymD7D8rp8IiYStP69VTWcmLWHU/view", target="_blank">handout</a></td>
@@ -197,23 +197,21 @@ a:hover {
 	</tr>
 	
 	
-	<!-- Eric B, Eric M, Anna, Adam M-->
+	<!-- Erics-->
 	<tr>
 		<td>5/4</td>
 		<td>Weak Determinism, Interaction, and BMRS</td>
 		<td><a href= "https://sites.google.com/ucsd.edu/ebakovic/", target="_blank">Eric Bakovi&cacute;</a>, 
 			<a href= "https://sites.google.com/view/eric-meinhardt/home", target="_blank">Eric Meinhardt</a>
-			<a href= "https://annamai.net", target="_blank">Anna Mai</a>, 
-			<a href= "http://adammccollum.net", target="_blank">Adam McCollum</a>
 		</td> 
-		<td>UCSD, Rutgers</td>
+		<td>UCSD</td>
 		<td></td>
 	</tr>
 	
 	<!-- Eric M-->
 	<tr>
 		<td>5/11</td>
-		<td>TBA</td>
+		<td>Order theory, ternary features, and phonological maps</td>
 		<td><a href= "https://sites.google.com/view/eric-meinhardt/home", target="_blank">Eric Meinhardt</a></td> 
 		<td>UCSD</td>
 		<td></td>
@@ -221,6 +219,12 @@ a:hover {
 </table>
 
 	
+	
+	
+	
+	
+	
+<!------- FALL 2020 SCHEDULE  -------->	
 <hr>
 <p><b> Fall 2020 Schedule</b><br/>
 	Fridays 3:00 -- 4:30pm (EST) on Zoom.<br/>
