--- a/mathling/index.html
+++ b/mathling/index.html
@@ -41,10 +41,9 @@ a:hover {
        <td><a href="http://adamjardine.net">Adam Jardine</a></td> 
     </tr>
     <tr>
-      <td><b>Student organizers:</b></td>
+      <td><b>Student organizer:</b></td>
       <td><p style="color:#B82814">
 	      <a href="https://www.nchemey.com/">Natasha Chemey</a><br>
-	      Tatevik Yolyan
 	  </p>
       </td>
     </tr>
@@ -62,12 +61,25 @@ a:hover {
 
 
 <hr>
-	
-<p style="color:#B82814"><b>News</b><br/>
-	
+<!------- FALL 2021 SCHEDULE  -------->	
+<h3>Fall 2021 Schedule</h3>
+<p>
+    Every other Friday (approximately), 2-3pm, Rm 108 (and on Zoom if requested)
+</p>
+
+<ul>
+    <li>
+        <b>Sep 24</b> Organization, <a href="https://en.wikipedia.org/wiki/Myhill%E2%80%93Nerode_theorem">Myhill-Nerode theorem</a> (Adam)
+    </li>
+    <li>
+        <b>Oct 8</b> Strictly local sets (Dine)
+    </li>
+    <li>
+        <b>Oct 15</b> ? (?)
+    </li>
+</ul>
+
 <hr>
-	
-	
 <!------- SPRING 2021 SCHEDULE  -------->	
 <p><b> Spring 2021 Schedule</b><br/>
 	Tuesdays 3:00 -- 4:00pm (EST) on Zoom.<br/>
