--- a/mathling/index.html
+++ b/mathling/index.html
@@ -72,7 +72,7 @@ a:hover {
         <b>Sep 24</b> Organization, <a href="https://en.wikipedia.org/wiki/Myhill%E2%80%93Nerode_theorem">Myhill-Nerode theorem</a> (Adam)
     </li>
     <li>
-        <b>Oct 8</b> Strictly local sets (Dine)
+        <b>Oct 8</b> Strictly local sets (Deen)
     </li>
     <li>
         <b>Oct 15</b> ? (?)
