oct 21 fall update

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -40,13 +40,13 @@ a:hover {
        <td><b>Faculty advisor:</b></td>
        <td><a href="http://adamjardine.net">Adam Jardine</a></td> 
     </tr>
-    <tr>
-      <td><b>Student organizer:</b></td>
-      <td><p style="color:#B82814">
-	      <a href="https://www.nchemey.com/">Natasha Chemey</a><br>
-	  </p>
-      </td>
-    </tr>
+    <!-- <tr> -->
+    <!-- <td><b>Student organizer:</b></td> -->
+    <!-- <td><p style="color:#B82814"> -->
+	  <!-- <a href="https://www.nchemey.com/">Natasha Chemey</a><br> -->
+	  <!-- </p> -->
+    <!-- </td> -->
+    <!-- </tr> -->
     <tr>
       <td colspan="2">
         <b><a href="https://drive.google.com/drive/u/1/folders/1_IWGTLM8Jb7mcU5N9HklO8x6V7my3Bw-">Google drive folder</b></a> (requires permission)
@@ -75,7 +75,16 @@ a:hover {
         <b>Oct 8</b> Strictly local sets (Deen)
     </li>
     <li>
-        <b>Oct 15</b> ? (?)
+        <b>Oct 22</b> Stricly piecewise sets (Adam)
+    </li>
+    <li>
+        <b>Nov 5 (?)</b> Substitutable languages?
+    </li>
+    <li>
+        <b>Nov 19 (?)</b> Subsequential functions?
+    </li>
+    <li>
+        <b>Dec 3 (?)</b> ISL/OSL functions?
     </li>
 </ul>
 
